<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="movie"
            type="com.roldannanodegre.popularmovies.database.MovieEntity"/>
        <variable
            name="videos"
            type="java.util.List"/>
        <variable
            name="reviews"
            type="java.util.List"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailActivity">


            <include
                android:id="@+id/image_layout"
                layout="@layout/movie_list_item"
                android:layout_width="133dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_original_title"
                app:layout_constraintTop_toTopOf="parent"
                app:movie="@{movie}" />

            <ImageButton
                android:id="@+id/im_videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{view -> listener.onVideosClick(videos)}"
                app:layout_constraintEnd_toStartOf="@+id/im_overvies"
                app:layout_constraintStart_toStartOf="@+id/image_layout"
                app:layout_constraintTop_toTopOf="@+id/im_favorite"
                app:layout_constraintVertical_chainStyle="spread"
                app:srcCompat="@drawable/ic_ondemand_video_black_24dp"
                android:clickable="@{!(videos==null)}"
                android:alpha='@{videos==null?Float.valueOf("0.5"):Float.valueOf("1")}'/>

            <ImageButton
                android:id="@+id/im_overvies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{view -> listener.onReviewsClick(reviews)}"
                app:layout_constraintEnd_toStartOf="@+id/im_favorite"
                app:layout_constraintStart_toEndOf="@+id/im_videos"
                app:layout_constraintTop_toTopOf="@+id/im_videos"
                app:srcCompat="@drawable/ic_rate_review_black_24dp"
                android:clickable="@{!(reviews==null)}"
                android:alpha='@{reviews==null?Float.valueOf("0.5"):Float.valueOf("1")}'/>

            <ImageButton
                android:id="@+id/im_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{view -> listener.onFavoriteClick(movie)}"
                app:layout_constraintEnd_toEndOf="@+id/image_layout"
                app:layout_constraintStart_toEndOf="@+id/im_overvies"
                app:layout_constraintTop_toBottomOf="@+id/image_layout"
                app:srcCompat="@{movie.favorite ? @drawable/ic_star_black_24dp : @drawable/ic_star_border_black_24dp }" />

            <TextView
                android:id="@+id/tv_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toTopOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:maxWidth="150dp"
                android:paddingTop="15dp"
                android:text="@{movie.title}"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/tv_original_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/image_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_layout"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tv_original_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_original_title"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_original_title"
                app:layout_constraintTop_toTopOf="@+id/tv_original_title" />

            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:maxWidth="150dp"
                android:paddingTop="15dp"
                android:text="@{movie.originalTitle}"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/image_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tv_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_release_date"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_release_date"
                app:layout_constraintTop_toTopOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:paddingTop="15dp"
                android:text="@{movie.releaseDate}"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/tv_rating"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_original_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_vote_average"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_rating"
                app:layout_constraintTop_toTopOf="@+id/tv_rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="15dp"
                android:text="@{String.valueOf(movie.voteAverage)}"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/im_favorite"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_original_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                app:layout_constraintVertical_chainStyle="packed" />



            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="15dp"
                android:text="@{String.valueOf(movie.overview)}"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_favorite" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>